# NDKVoice

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/handsome/ndkvoice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_handsome_ndkvoice_Utils.h  sound.cpp
app/src/main/java/com/handsome/ndkvoice/: MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/handsome/ndkvoice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
